@@ -21,6 +21,8 @@ package de.schlund.pfixxml.config;
 import java.util.Map;
 import java.util.Properties;
 
+import de.schlund.pfixcore.generator.IWrapper;
+
 /**
  * Provides configuration for a specific page.  
  * 
@@ -113,7 +115,7 @@ public interface PageRequestConfig {
      * 
      * @return map containinge prefix to authwrapper mappings
      */
-    Map<String, Class> getAuxWrappers();
+    Map<String, Class<? extends IWrapper>> getAuxWrappers();
 
     /**
      * Returns context resources defined for this page. The map has the form
@@ -147,6 +149,6 @@ public interface PageRequestConfig {
      * @return class of the auth wrapper or <code>null</code> if this
      * is not an auth page
      */
-    Class getAuthWrapperClass();
+    Class<? extends IWrapper> getAuthWrapperClass();
     
 }
